--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -215,6 +215,7 @@ h6 {
             box-shadow: none;
             border-bottom-left-radius: 0px;
             border-bottom-right-radius: 0px;
+            background-color: #D90000;
         }
     }
 
