--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -63,7 +63,7 @@ $sk-skin-btn-default: #293756;
                 }
             }
         }
-        .collapsible li {
+        .collapsible > li {
             border-top: 1px solid lighten($sk-skin-flat, 10%);
             text-transform: uppercase;
             color: lighten($sk-skin-flat, 50%);
@@ -82,7 +82,7 @@ $sk-skin-btn-default: #293756;
                     background-color: lighten($sk-skin-flat, 3%);
                 }
                 &.active {
-                    background-color: $sk-skin-flat;
+                    background-color: $sk-skin-navbar;
                 }
                 &:before {
                     content: " ";
@@ -96,6 +96,11 @@ $sk-skin-btn-default: #293756;
                     top: 3px;
                     background-color: $sk-skin-flat;
                 }
+            }
+            .collapsible-body li a {
+                line-height: 45px;
+                font-size: 0.8rem;
+                height: 45px;
             }
         }
         .fa {
