--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -3,6 +3,8 @@ $sk-skin-primary-color: #309e9e;
 $sk-skin-navbar: #0085b2;
 $sk-skin-accent: #6FBAD5;
 $sk-skin-flat: #262A33;
+// Grey
+$sk-skin-grey: #666;
 // Gradients
 $sk-skin-gradient-start: #222735;
 $sk-skin-gradient-end: #63739c;
@@ -196,6 +198,16 @@ $sk-skin-btn-default: #293756;
         }
     }
     // Custom inputs
+    input,
+    input[type=value],
+    input::placeholder {
+        font-size: 1rem;
+        font-family: $font-family-base;
+    }
+    input[type=value],
+    input::placeholder {
+        color: #ccc;
+    }
     input[type="email"],
     textarea.md-textarea,
     input[type="text"],
@@ -215,6 +227,32 @@ $sk-skin-btn-default: #293756;
         &+label {
             color: $sk-skin-accent;
         }
+    }
+    input.select-dropdown {
+        margin-top: .2rem;
+        color: lighten($body-color, 40%);
+        margin-bottom: 30px;
+        height: 3.2rem;
+    }
+    input.select-dropdown:disabled,
+    input[type="text"]:disabled {
+        background-color: $color-mainpanel;
+        border-bottom: 1px solid lighten($color-sidebar, 70%);    
+    }
+    span.caret {
+        color: initial;
+        position: absolute;
+        right: 10px;
+        top: 20px;
+        font-size: 10px;
+        z-index: 1;
+    }
+    span.caret.disabled {
+        display: none;
+    }
+    .dropdown-content {
+        margin-top: .2rem;
+        border-radius: .5rem;
     }
     input[type=checkbox]:checked {
         &+label {
