--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -4,12 +4,12 @@ $color-body_text: #666;
 $color-mainpanel: #F6F6F6;
 $color-nav: #0085B2;
 $color-nav-sub: #35A1C7;
-$color-nav-sub2: #6FBAD5;
+$color-nav-sub2: #6FBAD5; $info-color: #6FBAD5;
 $color-nav_text: #00B6F2;
 $color-select: #0085B2;
 $color-incomplete: #FF8000;
-$color-complete: #92C100;
-$color-cancel: #D90000;
+$color-complete: #92C100; $success-color: #92C100;
+$color-cancel: #D93600;
 $color-table-th: #a5d6e6;
 
 // MDB bootstrap overrides
