--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -67,7 +67,7 @@
 @import "node_modules/mdb-pro/sass/mdb/free/data/mixins";
 
 // Variables
-@import "node_modules/mdb-pro/sass/mdb/free/data/colors";
+@import "overrides/colors";
 //@import "node_modules/mdb-pro/sass/mdb/free/data/variables-b4";
 @import "node_modules/mdb-pro/sass/mdb/free/data/variables";
 
