--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -752,12 +752,12 @@ table td a:first-child {
 
 }
 
-.file-icon[href$=".xls"]:before {
+.file-icon[href*=".xls"]:before {
     content: "\f1c3";
 
 }
 
-.file-icon[href$=".doc"]:before {
+.file-icon[href*=".doc"]:before {
     font-family: FontAwesome;
     content: "\f1c2";
 
@@ -814,7 +814,7 @@ table td a:first-child {
 
 .icon-approval-pending {
     color: $color-incomplete;
-    
+
     &:hover {color: $color-incomplete;}
     &:hover::before {color: $color-incomplete;}
     &:before {
@@ -829,7 +829,7 @@ table td a:first-child {
 
 .icon-approval-no {
     color: $color-cancel;
-    
+
     &:hover {color: $color-cancel;}
     &:hover::before {color: $color-cancel;}
     &:before {
@@ -844,7 +844,7 @@ table td a:first-child {
 
 .icon-approval-yes {
     color: $color-complete;
-    
+
     &:hover {color: $color-complete;}
     &:hover::before {color: $color-complete;}
     &:before {
@@ -862,7 +862,7 @@ table td a:first-child {
     &:hover::before {color: $color-select;}
     &:before {content: "\f075";}
 }
-    
+
 
 .icon-handler {
     background-image: url(../images/dragdrop.svg);
