Alert modal, Task assign modal

--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -1137,7 +1137,7 @@ input.md-form.addon {
 }
 
 .btn-neutral {
-    background-color: $color-nav;
+    background-color: $info-color;
 }
 
 .btn-attention {
