--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -176,12 +176,12 @@ h6 {
     border-radius: .25rem;
 }
 
-.table tr .tasktype-1 {
+.tasktype-1 {
     @extend .tasktype;
     background-color: $color-incomplete;
 }
 
-.table tr .tasktype-2 {
+.tasktype-2 {
     @extend .tasktype;
     background-color: $color-nav-sub;
 }
@@ -958,6 +958,14 @@ input.md-form.addon {
     text-align: center;
     display: block;
     margin: 0 auto;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.profile-l {
+    border-radius: 50%;
+    width: 90px;
+    height: 90px;
+    border: 2px solid $white;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
