--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -993,6 +993,12 @@ input.md-form.addon {
     margin-top: .5rem;
 }
 
+.profile-s {
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+}
+
 .pos-rel {
     position: relative;
 
