--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -254,8 +254,9 @@ h6 {
 }
 
 .input-group .form-control:not(:last-child) {
-    border-bottom-right-radius: 3rem;
-    border-top-right-radius: 3rem;
+    border-bottom-right-radius: .4rem;
+    border-top-right-radius: .4rem;
+    text-indent: 0;
 }
 
 @media only screen and (max-width : 768px) {
