--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -214,6 +214,7 @@ $sk-skin-btn-default: #293756;
         color: #ccc;
     }
     input[type="email"],
+    input[type="search"],
     textarea.md-textarea,
     input[type="text"],
     input[type="password"] {
@@ -223,6 +224,7 @@ $sk-skin-btn-default: #293756;
         text-indent: 1rem;
     }
     input[type="email"]:focus:not([readonly]),
+    input[type="search"]:focus:not([readonly]),
     textarea.md-textarea:focus:not([readonly]),
     input[type="text"]:focus:not([readonly]),
     input[type="password"]:focus:not([readonly]),
@@ -243,6 +245,11 @@ $sk-skin-btn-default: #293756;
     input[type="text"]:disabled {
         background-color: $color-mainpanel;
         border-bottom: 1px solid lighten($color-sidebar, 70%);    
+    }
+    .input-group-addon {
+        font-weight: 300;
+        font-size: 1.4rem;
+        background-color: transparent;
     }
     span.caret {
         color: initial;
@@ -289,6 +296,11 @@ $sk-skin-btn-default: #293756;
             }
         }
     }
+    input[type="radio"]:checked + label:after {
+        border: 2px solid $sk-skin-accent;
+        background-color: $sk-skin-accent;
+    }
+    
     /* Select colors */
     .dropdown-content {
         li:not(.disabled) {
@@ -488,7 +500,7 @@ $sk-skin-btn-default: #293756;
                 border-top: none;
             }
             &:hover {
-                background-color: $sk-skin-accent;
+                background-color: $color-nav-sub;
                 cursor: pointer;
                 &:last-child {
                     border-bottom-left-radius: 1rem;
