--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -106,6 +106,13 @@ h6 {
     font-size: 1.35rem;
 }
 
+@media only screen and (max-width: 768px) {
+    .total-sty {
+        margin-bottom: 4rem;
+        border-bottom: 1px dashed lighten($color-sidebar, 70%);
+        }
+}
+
 .showdata-box h4 {
     line-height: 2rem;
 }
@@ -249,7 +256,7 @@ h6 {
     }
 
     span {
-            z-index: 0;
+        z-index: 0;
     }
 }
 
@@ -402,21 +409,21 @@ header .dropdown-toggle {
     }
 }
 
-.dropdown-custom-login {
-    background-color: $color-nav;
-    color: $white;
-    border-radius: 0;
-    box-shadow: none;
-    top: 68px;
-    padding: 0.2rem 0.2rem;
-}
+//.dropdown-custom-login {
+//    background-color: $color-nav;
+//    color: $white;
+//    border-radius: 0;
+//    box-shadow: none;
+//    top: 68px;
+//    padding: 0.2rem 0.2rem;
+//}
 
-.dropdown-item:focus,
-.dropdown-item:hover,
-.dropdown-menu .dropdown-item:active {
-    background-color: $color-nav-sub;
-    color: $white;
-}
+//.dropdown-item:focus,
+//.dropdown-item:hover,
+//.dropdown-menu .dropdown-item:active {
+//    background-color: $color-nav-sub;
+//    color: $white;
+//}
 
 
 ////// Breadcrumb
