Notification dropdown white version

--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -407,6 +407,9 @@ header .dropdown-toggle {
         border-radius: 50%;
         border: 3px solid $white;
     }
+    &:after {
+        content: none;
+    }
 }
 
 //.dropdown-custom-login {
