--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -500,6 +500,17 @@ $sk-skin-btn-default: #293756;
         border-bottom-left-radius: 1rem;
         border-left: 1px solid lighten($color-sidebar, 70%);
         border-bottom: 1px solid lighten($color-sidebar, 70%);
+        &:before {
+            content: "";
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 0 12px 12px 12px;
+            border-color: transparent transparent #ffffff transparent;
+            position: absolute;
+            top: -12px;
+            left: 163px;
+        }
         .tasktype-1 {
             border-radius: 0.1rem;
             padding: 0px 5px;
@@ -511,7 +522,7 @@ $sk-skin-btn-default: #293756;
                 border-top: none;
             }
             &:hover {
-                background-color: lighten($color-sidebar, 78%);
+                background-color: lighten($color-sidebar, 79%);
                 cursor: pointer;
                 &:last-child {
                     border-bottom-left-radius: 1rem;
