--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -412,22 +412,10 @@ header .dropdown-toggle {
     }
 }
 
-//.dropdown-custom-login {
-//    background-color: $color-nav;
-//    color: $white;
-//    border-radius: 0;
-//    box-shadow: none;
-//    top: 68px;
-//    padding: 0.2rem 0.2rem;
-//}
-
-//.dropdown-item:focus,
-//.dropdown-item:hover,
-//.dropdown-menu .dropdown-item:active {
-//    background-color: $color-nav-sub;
-//    color: $white;
-//}
-
+.double-nav .dropdown .dropdown-menu a {
+    color: $sk-skin-accent;
+    padding: 0;
+}
 
 ////// Breadcrumb
 
