--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -481,25 +481,37 @@ $sk-skin-btn-default: #293756;
             left: 0;
         }
     }
-    /* Activity stream dropdown */
+    /* Dropdown */
     .dropdown-custom-login {
         box-shadow: none;
         background-color: transparent;
     }
-    
-    
-    /* Activity stream dropdown */
     .dropdown-menu {
         padding: 0;
         margin: 0;
     }
-    .activity-box {
+    .dropdown-box {
         background-color: $white;
         height: 100%;
-        min-width: 350px;
         border-bottom-left-radius: 1rem;
         border-left: 1px solid lighten($color-sidebar, 70%);
         border-bottom: 1px solid lighten($color-sidebar, 70%);
+    }
+    .dropdown-arrow {
+        content: "";
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 12px 12px 12px;
+        border-color: transparent transparent #ffffff transparent;
+        position: absolute;
+    }
+    /* Activity stream dropdown */
+    .activity-box {
+        @extend .dropdown-box;
+        min-width: 350px;
+        position: relative;
+        left: 143px;
         .tasktype-1 {
             border-radius: 0.1rem;
             padding: 0px 5px;
@@ -515,15 +527,9 @@ $sk-skin-btn-default: #293756;
                     }
                 }
                 &:before {
-                    content: "";
-                    width: 0;
-                    height: 0;
-                    border-style: solid;
-                    border-width: 0 12px 12px 12px;
-                    border-color: transparent transparent #ffffff transparent;
-                    position: absolute;
+                    @extend .dropdown-arrow;
                     top: -12px;
-                    left: 163px;
+                    left: 160px;
                 }
             }
             &:hover {
@@ -564,7 +570,43 @@ $sk-skin-btn-default: #293756;
             }
         }
     }
+    /* User login dropdown */
+    .double-nav .dropdown .dropdown-menu .user-box {
+        @extend .dropdown-box;
+        min-width: 220px;
+        position: relative;
+        a {
+            font-size: .85rem;
+            color: $sk-skin-grey;
+            padding: 1rem;
+            display: block;
+            position: static;
+            font-weight: 400;
+            border-top: 1px dashed lighten($sk-skin-accent, 20%);
+            &:first-child {
+                border-top: none;
+                &:hover {
+                    &:before {
+                        border-color: transparent transparent lighten($color-sidebar, 79%) transparent;
+                    }
+                }
+                &:before {
+                    @extend .dropdown-arrow;
+                    top: -12px;
+                    left: 130px;
+                }
+            }
+            &:hover {
+                background-color: lighten($color-sidebar, 79%);
+                cursor: pointer;
+                &:last-child {
+                    border-bottom-left-radius: 1rem;
+                }
+            }
+        }
+    }
 }
+
 
 
 
